--- a/prangati/package.json
+++ b/prangati/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
+    "@nextui-org/accordion": "^2.0.40",
     "@nextui-org/button": "2.0.37",
     "@nextui-org/code": "2.0.32",
     "@nextui-org/dropdown": "^2.1.29",
@@ -24,6 +25,7 @@
     "@nextui-org/theme": "2.2.9",
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
+    "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
@@ -39,7 +41,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
