--- a/prangati/package.json
+++ b/prangati/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/link": "2.0.34",
     "@nextui-org/listbox": "2.1.25",
     "@nextui-org/navbar": "2.0.36",
+    "@nextui-org/react": "^2.4.8",
     "@nextui-org/scroll-shadow": "^2.1.19",
     "@nextui-org/snippet": "2.0.41",
     "@nextui-org/switch": "2.0.33",
@@ -26,6 +27,7 @@
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
     "@reduxjs/toolkit": "^2.2.8",
+    "@theme-toggles/react": "^4.1.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
@@ -43,7 +45,8 @@
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-swipeable": "^7.0.1"
+    "react-swipeable": "^7.0.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
