--- a/prangati/package.json
+++ b/prangati/package.json
@@ -46,8 +46,10 @@
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
     "react-swipeable": "^7.0.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
