--- a/prangati/package.json
+++ b/prangati/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/kbd": "2.0.33",
     "@nextui-org/link": "2.0.34",
     "@nextui-org/listbox": "2.1.25",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/navbar": "2.0.36",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/scroll-shadow": "^2.1.19",
