--- a/prangati/package.json
+++ b/prangati/package.json
@@ -39,7 +39,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "intl-messageformat": "^10.5.0",
     "js-cookie": "^3.0.5",
-    "next": "^14.2.4",
+    "next": "14.2.4",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
