--- a/prangati/package.json
+++ b/prangati/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
+    "@heroui/pagination": "^2.2.13",
     "@nextui-org/accordion": "^2.0.40",
     "@nextui-org/button": "2.0.37",
     "@nextui-org/code": "2.0.32",
