--- a/prangati/package.json
+++ b/prangati/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev ",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
@@ -31,26 +31,26 @@
     "@reduxjs/toolkit": "^2.2.8",
     "@theme-toggles/react": "^4.1.0",
     "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
-    "clsx": "2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^12.6.2",
     "i18next": "^23.12.1",
     "i18next-browser-languagedetector": "^8.0.0",
-    "intl-messageformat": "^10.5.0",
     "js-cookie": "^3.0.5",
     "next": "^15.2.4",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-slick": "^0.30.3",
     "react-spinners": "^0.14.1",
     "react-swipeable": "^7.0.1",
-    "styled-components": "^6.1.13",
+    "sass": "^1.86.3",
+    "slick-carousel": "^1.8.1",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
@@ -58,6 +58,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
     "autoprefixer": "10.4.19",
