--- a/prangati/package.json
+++ b/prangati/package.json
@@ -49,7 +49,8 @@
     "react-swipeable": "^7.0.1",
     "sass": "^1.86.3",
     "slick-carousel": "^1.8.1",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
