--- a/Backend/package.json
+++ b/Backend/package.json
@@ -35,12 +35,13 @@
     "@nestjs/websockets": "^11.0.13",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.8",
     "lib-address": "^0.6.0",
     "multer": "^1.4.5-lts.1",
+    "nestjs-paginate": "^12.5.0",
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
