--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.8",
@@ -61,6 +62,7 @@
     "@types/babel__template": "^7.4.4",
     "@types/babel__traverse": "^7.20.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.9",
     "@types/estree": "^1.0.7",
     "@types/express": "^4.17.17",
     "@types/istanbul-lib-coverage": "^2.0.6",
